# agent-skills

./: .cspellignore  .gitignore  .markdownlint.json  INSTALLER.md  README.md  cspell.json  db.json  install.py  installer_output.txt  installer_screen.txt  pyproject.toml  pytest.ini  skills_manager.py  test_install.py  test_installer.py
.opencode/: INSTALL.md  SETUP.md
.opencode/plugin/: superpowers.js
canvas-design/: SKILL.md
commands/: diff-review.md  project-recap.md
doc-coauthoring/: SKILL.md
frontend-design/: SKILL.md
frontend-design/references/: aesthetics.md  anti-patterns.md  examples.md
lib/: skills-core.js
plugins/superpowers/: README.md
python-code-patterns/: SKILL.md
python-quality-gates/: SKILL.md
python-quality-gates/scripts/: quality-gates.sh
quality-gates/: SKILL.md
quality-gates/scripts/: quality-gates.sh
self-improving-agent/: SKILL.md
self-improving-agent/assets/: ERRORS_template.md  FEATURE_REQUESTS_template.md
self-improving-agent/references/: formats.md  promotion.md  review.md
skill-creator/: SKILL.md
skill-creator/scripts/: package_skill.py  quick_validate.py
skills/anthropic-canvas-design/: SKILL.md
skills/anthropic-frontend-design/: SKILL.md
skills/anthropic-internal-comms/: SKILL.md
skills/anthropic-mcp-builder/: SKILL.md
skills/anthropic-pdf/: forms.md
skills/anthropic-webapp-testing/: SKILL.md
skills/canvas-design/: SKILL.md
skills/changelog-generator/: SKILL.md
skills/doc-coauthoring/: SKILL.md
src/: __init__.py  app.py  config.py  models.py  persistence.py  plugin.py  skills.py  utils.py
(+120 files in other folders)
