[project]
name = "skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.0",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "playwright>=1.57.0",
    "pypdf>=6.6.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "textual>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
]

[tool.pyrefly]
search_path = ["."]
